Time: 26 ms (92.09%), Space: 51.9 MB (37.49%) - LeetHub